# src/router/ZMP3Router.js
@@ -1,36 +1,16 @@
 const express = require("express");
-const zmp3Controller = require("../controller/zmp3Controller.js");
+const zmp3Controller = require("../controller/ZMP3Controller");
 const router = express.Router()
 
-router.get('/testGetPlaylist', (req, res) => {
-    zmp3Controller.testGetPlaylist(req, res);
-});
-router.get('/getChartHome', (req, res) => {
-    zmp3Controller.getChartHome(req, res);
-});
-router.get('/top100', (req, res) => {
-    zmp3Controller.getTop(req, res);
-});
-router.get('/getSongInfo/:id', (req, res) => {
-    zmp3Controller.getSongInfo(req, res);
-});
-router.get('/getStreaming/:id', (req, res) => {
-    zmp3Controller.getStreamings(req, res);
-});
-router.get('/getLyric/:id', (req, res) => {
-    zmp3Controller.getLyric(req, res);
-});
-router.get('/getFullInfo/:id', (req, res) => {
-    zmp3Controller.getFullInfo(req, res);
-});
-router.get('/getPlaylist/:id', (req, res) => {
-    zmp3Controller.getPlaylist(req, res);
-});
-router.get('/getDetailArtist/:alias', (req, res) => {
-    zmp3Controller.getArtistDetail(req, res);
-});
-router.get('/search/:keyword', (req, res) => {
-    zmp3Controller.search(req, res);
-});
+router.get('/testGetPlaylist', zmp3Controller.testGetPlaylist);
+router.get('/getChartHome', zmp3Controller.getChartHome);
+router.get('/top100', zmp3Controller.getTop);
+router.get('/getSongInfo/:id', zmp3Controller.getSongInfo);
+router.get('/getStreaming/:id', zmp3Controller.getStreamings);
+router.get('/getLyric/:id', zmp3Controller.getLyricInfo);
+router.get('/getFullInfo/:id', zmp3Controller.getFullInfo);
+router.get('/getPlaylist/:id', zmp3Controller.getPlaylist);
+router.get('/getArtist/:alias', zmp3Controller.getArtist);
+router.get('/search/:keyword', zmp3Controller.search);
 
 module.exports = router;
